Popup content in table

--- a/css/mapinfo.css
+++ b/css/mapinfo.css
@@ -12,3 +12,18 @@
 .miPolygon {
 	color: 'red';
 }
+.miPopupTable  td {
+	border: 1px solid #FFFFFF;
+	border-collapse: collapse;
+	padding-left: 5px;
+	padding-right: 10px;
+}
+.miPopupTable tr > td:first-child {
+	background-color: #D8D8D8;
+}
+.miPopupSingleColumn  td {
+	border: 1px solid #FFFFFF;
+	border-collapse: collapse;
+	padding-left: 5px;
+	padding-right: 10px;
+}
