--- a/css/mapinfo.css
+++ b/css/mapinfo.css
@@ -21,3 +21,20 @@
 .miPopupTable tr > td:first-child {
 	background-color: #D8D8D8;
 }
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+.info {
+    padding: 6px 8px;
+    background: #c0c0c0;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
