--- a/css/mapinfo.css
+++ b/css/mapinfo.css
@@ -4,14 +4,6 @@
 	border: 2px solid #CCCCCC;
 	margin-top: 25px;
 }
-.miMarker {
-	background-color: rgba(0,128,0,.9);
-	border: 3px solid #FF0000;
-	border-radius: 50%;
-}
-.miPolygon {
-	color: 'red';
-}
 .miPopupTable  td {
 	border: 1px solid #FFFFFF;
 	border-collapse: collapse;
@@ -22,19 +14,26 @@
 	background-color: #D8D8D8;
 }
 .legend {
-    line-height: 18px;
-    color: #555;
+	line-height: 20px;
+	color: #555;
 }
 .legend i {
-    width: 32px;
-    height: 16px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.8;
+	width: 32px;
+	height: 16px;
+	border: 1px solid #DCDCDC;
+	float: left;
+	margin-right: 8px;
 }
-.info {
-    padding: 6px 8px;
-    background: #c0c0c0;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    border-radius: 5px;
+.legend hr {
+	display: inline-block;
+	margin: auto;
+	margin-right: 5px;
+	border-style: solid;
+	border-width: 3px 16px;
+}
+.title {
+	padding: 6px 8px;
+	background: #FFFFFF;
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
 }
